# briar

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DEEP.md  ARCHITECTURE_MAP.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY_EC2.md  Dockerfile  FEATURES.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  REFACTORING.md  Taskfile.yml  acme.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
agents/: README.md  agent.md  auth.md  context.md  creds.md  dashboard.md  extract.md  flows.md  journal.md  plan.md  runbook.md  scaffold.md  telemetry.md  version.md
examples/: acme.yaml  all_features.yaml  implementation.json  lightapi-e2e.yaml  multi_company.env.example  multi_company.yaml  pr-fixes.json  runbook.yaml  simple-single-repo.yaml
src/briar/: __init__.py  __main__.py  _http_retry.py  _registry.py  cli.py  completion.py  config.py  credentials.py  decorators.py  doctor.py  env_vars.py  error_policy.py  errors.py  fields.py  http.py  infer.py  log_context.py  logging.py  pagination.py  profile.py  settings.py  update_check.py  ws.py
src/briar/agent/: __init__.py  _enums.py  _llm.py  runner.py  tools.py
src/briar/auth/: __init__.py  _acquirer.py  _prompt.py
src/briar/commands/: __init__.py  _enums.py  agent.py  auth.py  base.py  catalogue.py  chat.py  checkpoints.py  completion.py  config.py  config_cmd.py  context.py  dashboard.py  doctor.py  extract.py  iac.py  init.py  journal.py  mcp.py  memberships.py  oauth.py  plan.py  profile_cmd.py  raw_api.py  resource.py  runbook.py  runs.py  secrets.py  tasks.py  telemetry.py  version.py  workflows.py  workspaces.py
src/briar/completion_templates/: bash.tmpl  bash_subcommand.tmpl  inner.tmpl  leaf.tmpl  zsh.tmpl  zsh_subcommand.tmpl
src/briar/credentials/: __init__.py  _aws.py  _bootstrap.py  _paths.py  _store.py  aws_secrets.py  envfile.py  infisical.py  ssm.py  vault.py
src/briar/dashboard/: __init__.py  actions.py  collectors.py  server.py
src/briar/extract/: __init__.py  _chat.py  _cloud.py  _enums.py  _gh.py  _meeting.py  _provider.py  _time_util.py  _tracker.py  _types.py  _user_filter.py  active_tickets.py  active_work.py  aws_infra.py  base.py  canonical.py  ci_health.py  claude_md.py  code_hotspots.py  code_scanning.py  codebase_conventions.py  commit_message_quality.py  composer.py  defect_hotspots.py  dependency_health.py  github_deployments.py  meeting_context.py  meeting_digest.py  pr_archaeology.py  pr_hygiene.py  pr_review_context.py  release_cadence.py  repo_governance.py  revert_signals.py  review_nits.py  reviewer_profile.py  slack_context.py  stale_prs.py  test_discipline.py  ticket_archaeology.py  (+2 more)
src/briar/formatting/: __init__.py  base.py  columns.py  csv.py  json.py  quiet.py  table.py  yaml.py
src/briar/iac/: __init__.py  config_file.py  engine.py  models.py  reference_map.py
src/briar/init_templates/: briar_toml.tmpl
src/briar/journal/: __init__.py  _journal.py  _render.py  models.py
src/briar/mcp/: __init__.py  _errors.py  _manager.py  _tool.py  defaults.py
src/briar/mcpserver/: __init__.py  _auth.py  _tools.py  server.py
src/briar/messaging/: __init__.py  _jira_creds.py  _writer.py  bitbucket_pr_comment.py  github_pr_comment.py  jira_comment.py  jira_transition.py  slack_channel.py  telegram_chat.py
src/briar/notify/: __init__.py  _sink.py  email.py  pagerduty.py  slack.py  telegram.py
src/briar/plan/: __init__.py  _board.py  _enums.py  _graph.py  _json_utils.py  _models.py  _replan.py  _selector.py  _status.py  _store.py  _synthesize.py  _writeback.py
src/briar/service/: __init__.py  _gating.py  extract.py  knowledge.py  runbook.py
src/briar/storage/: __init__.py  _models.py  base.py  briar_api.py  file.py  postgres.py
src/briar/telemetry/: __init__.py  _config.py  _scrubber.py
tests/: __init__.py  conftest.py  test_abstractions.py  test_cli_extract.py  test_config_file.py  test_dashboard.py  test_extract.py  test_extract_chats.py  test_extract_meetings.py  test_fields.py  test_formatting.py  test_journal.py  test_knowledge_splicer.py  test_log_context.py  test_plan.py  test_plan_run.py  test_profile.py  test_reconcile.py  test_rules_registry.py  test_runbook.py  test_scaffold.py  test_schedule_calendar.py  test_scheduler.py  test_smart_scheduler.py  test_storage.py  test_user_filter.py  test_ws.py
tests/integration/: conftest.py  mcp_echo_server.py  test_acquirer_real.py  test_agent_loop_real.py  test_auth_login_real.py  test_cli_extract_real.py  test_cli_smoke_subprocess.py  test_extract_aws_real.py  test_extract_github_real.py  test_extract_jira_real.py  test_llm_real.py  test_local_commands_real.py  test_mcp_http_auth.py  test_mcp_live_real.py  test_mcp_server_live.py  test_messaging_bitbucket_real.py  test_messaging_github_inline_real.py  test_messaging_jira_real.py  test_messaging_real.py  test_notify_real.py  test_plan_llm_real.py  test_registry_contract.py  test_tracker_real.py
tests/unit/: test_cli_meta.py  test_completion.py  test_config.py  test_decorators.py  test_doctor.py  test_env_vars.py  test_error_policy.py  test_errors.py  test_file_tool_sandbox.py  test_formatting.py  test_http_retry.py  test_infer.py  test_log_context.py  test_pagination.py  test_runner_dispatch.py  test_update_check.py
tests/unit/agent/: conftest.py  test_anthropic_llm.py  test_bedrock_llm.py  test_gemini_llm.py  test_llm_registry.py  test_openai_llm.py  test_runner_loop.py  test_runner_mcp.py  test_tools.py
tests/unit/auth/: test_aws_sso.py  test_aws_static.py  test_github_device.py  test_jira_session.py  test_prompt.py
tests/unit/commands/: test_agent_cmd.py  test_agent_mcp_defaults.py  test_agent_params.py  test_auth.py  test_auth_cmd.py  test_auth_params.py  test_chat.py  test_cli.py  test_cmd_creds.py  test_context.py  test_context_params.py  test_dashboard_cmd.py  test_dashboard_params.py  test_extract.py  test_extract_params.py  test_init.py  test_journal.py  test_journal_params.py  test_plan_cmd.py  test_plan_params.py  test_plan_run_params.py  test_runbook.py  test_runbook_params.py  test_scaffold.py  (+6 more)
tools/: mutation_test.py
(+207 files in other folders)
