[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briar-cli"
version = "1.1.0"
description = "Terminal client for the Briar agent-orchestration API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Briar" }]
keywords = ["briar", "cli", "agents", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "httpx>=0.27,<1",      # HTTP client — replaces urllib boilerplate
    "pydantic>=2.5,<3",    # config-file validation with locator-aware errors
    "PyYAML>=6.0,<7",      # YAML emit/parse (replaces a hand-rolled emitter)
    "rich>=13,<14",        # pretty tables; auto-degrades on non-TTY pipes
    "boto3>=1.34,<2",      # AWS extractor (lazy-imported by aws_infra only)
    "jinja2>=3.1,<4",      # `briar dashboard` template engine
    "schedule>=1.2,<2",    # in-process scheduler (replaces cron)
    "pytz",                # `schedule`'s tz support for `at("HH:MM", tz)`
    "psycopg[binary]>=3.1,<4",  # postgres KnowledgeStore backend (lazy-imported)
]

[project.optional-dependencies]
test = []  # tests run on stdlib `unittest discover`
dev = [
    "black>=25,<26",
    "mypy>=1.13,<2",
]


[tool.black]
line-length = 160
target-version = ["py310", "py311", "py312"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true   # boto3/schedule/etc. lack stubs
# Only check the package, not tests or examples.
files = ["src/briar"]

[project.scripts]
briar = "briar.cli:main"

[project.urls]
"Homepage" = "https://usebriar.com"
"Source" = "https://github.com/iklobato/usebriar-landing"

[tool.hatch.build.targets.wheel]
packages = ["src/briar"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "examples/", "tests/", "pyproject.toml"]
