[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "briar-cli"
version = "1.1.51"
description = "Terminal client for the Briar agent-orchestration API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Briar" }]
keywords = ["briar", "cli", "agents", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "httpx>=0.27,<1",      # HTTP client — replaces urllib boilerplate
    "pydantic>=2.5,<3",    # config-file validation with locator-aware errors
    "PyYAML>=6.0,<7",      # YAML emit/parse (replaces a hand-rolled emitter)
    "rich>=13,<14",        # pretty tables; auto-degrades on non-TTY pipes
    "boto3>=1.34,<2",      # AWS extractor (lazy-imported by aws_infra only)
    "jinja2>=3.1,<4",      # `briar dashboard` template engine
    "schedule>=1.2,<2",    # in-process scheduler (replaces cron)
    "pytz",                # `schedule`'s tz support for `at("HH:MM", tz)`
    "psycopg[binary]>=3.1,<4",  # postgres KnowledgeStore backend (lazy-imported)
    "SQLAlchemy>=2.0,<3", # ORM + pooled Engine for the postgres KnowledgeStore
    "anthropic>=0.40,<1",  # `briar agent` runner — autonomous prfix loop
    "PyGithub>=2.5,<3",    # GitHub API — backs the GithubProvider adapter
    "atlassian-python-api>=3.41,<4",  # Bitbucket Cloud — backs the BitbucketProvider adapter
    "GitPython>=3.1,<4",   # Pythonic git wrapper — used by `briar agent` for clone + config
    "sentry-sdk>=2.0,<3", # error + performance telemetry; on by default, opt-out via `briar telemetry off`
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-mock>=3.14,<4",
    "pytest-httpx>=0.30,<1",
    "pytest-randomly>=3.15,<4",
    "pytest-xdist>=3.6,<4",
    "pytest-timeout>=2.3,<3",
    "pytest-subtests>=0.13,<1",
    "hypothesis>=6.110,<7",
    "time-machine>=2.14,<3",
    "moto[secretsmanager,ssm]>=5,<6",
    "mcp>=1.0,<2",  # hermetic live MCP test (in-repo stdio server, no network) — like moto above
]
dev = [
    "black>=25,<26",
    "mypy>=1.13,<2",
    "ruff>=0.6,<1",  # linter — same tool the quality hook + `make lint` use
]
# Adapter SDKs are opt-in extras so a base install stays minimal. Operators
# only install what they actually use. Each adapter's `is_available()`
# reports False when its SDK is missing; each `complete()` / `read()` /
# `caller_identity()` raises a clear ImportError-derived message.
openai = ["openai>=1.40,<2"]
gemini = ["google-generativeai>=0.7,<1"]
mcp = ["mcp>=1.0,<2"]  # `briar agent` MCP-server tools — runbook `mcp:` block
vault = ["hvac>=2.0,<3"]
gcp = [
    "google-cloud-run>=0.10,<1",
    "google-cloud-pubsub>=2.18,<3",
    "google-cloud-logging>=3.8,<4",
    "google-api-python-client>=2.100,<3",  # for Cloud SQL Admin API
    "google-auth>=2.20,<3",
]
azure = [
    "azure-identity>=1.15,<2",
    "azure-mgmt-subscription>=3.1,<4",
    "azure-mgmt-appcontainers>=3.0,<4",
    "azure-mgmt-rdbms>=10.1,<11",
    "azure-mgmt-servicebus>=8.2,<9",
    "azure-mgmt-loganalytics>=12.0,<14",
]
# Convenience meta-extra — `pip install briar-cli[all]` pulls everything.
all = [
    "briar-cli[openai,gemini,mcp,vault,gcp,azure]",
]


[tool.black]
line-length = 160
target-version = ["py310", "py311", "py312"]


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true   # boto3/schedule/etc. lack stubs
# Only check the package, not tests or examples.
files = ["src/briar"]

[project.scripts]
briar = "briar.cli:main"

[project.urls]
"Homepage" = "https://usebriar.com"
"Source" = "https://github.com/iklobato/briar"
"Issues" = "https://github.com/iklobato/briar/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/briar"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "examples/", "tests/", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config --tb=short --import-mode=importlib"
xfail_strict = true
timeout = 30
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:botocore.*",
    "ignore::DeprecationWarning:boto3.*",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: fast unit test",
    "integration: cross-module / external-IO contract",
    "slow: takes >1s",
    "needs_pg: requires BRIAR_TEST_PG_DSN",
    "needs_aws_creds: requires real AWS credentials",
    "registry: parametrized registry-shape contract",
    "boundary: external-IO adapter; mocks httpx/subprocess/SDK",
    "property: hypothesis-driven",
]

[tool.coverage.run]
branch = true
source = ["src/briar"]
omit = ["src/briar/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
